include/altdss/capi/dss.h

    /*! 
    Input command string for the DSS.
    */
    ALTDSS_CAPI_DLL const char* Text_Get_Command(void);
    /*! 
    Input command string for the DSS.

    Since November 2024, this function also accepts multiple commands, separated by line breaks. The 
    results for each command, if not not empty, are collected and joined by line breaks in a big string,
    make available in the `Text.Result` API (`Text_Get_Result` in the low-level API).

    If you don't need the output of the individual commands, use the `Text.Commands` function or 
    equivalent (`Text_CommandBlock` in the low-level API). That alternative can provide more
    precise error messages, and can handle block comments.
    */
    ALTDSS_CAPI_DLL void Text_Set_Command(const char* Value);
    /*! 
    Result string for the last command.
    */
    ALTDSS_CAPI_DLL const char* Text_Get_Result(void);
    ALTDSS_CAPI_DLL void Text_CommandBlock(const char* Value);
    ALTDSS_CAPI_DLL void Text_CommandArray(const char** ValuePtr, int32_t ValueCount);